feat: try to resolve resources conflicts