@@ -9,6 +9,8 @@ import androidx.annotation.NonNull;
 import com.binlee.dl.DlConst;
 import com.binlee.dl.host.proxy.ProxyService;
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Objects;
 
@@ -17,44 +19,61 @@ import java.util.Objects;
  *
  * @author binlee
  */
-public final class DlServiceRunner {
+public final class DlServices {
 
-  private enum Command {
+  public enum Action {
     START, STOP, BIND, UNBIND
   }
 
-  private enum Result {
+  public enum Result {
     STARTED, STOPPED, BOUND, UNBOUND, NONE
   }
 
+  public interface IMonitor {
+    void onResult(ComponentName component, Action action, Result result);
+  }
+
   private static final ServiceQueue sQueue = new ServiceQueue();
+  private static IMonitor sMonitor;
+
+  ///////////////////////////////////////////////////////////////////////////
+  // public api
+  ///////////////////////////////////////////////////////////////////////////
+
+  public static void setMonitor(IMonitor monitor) {
+    sMonitor = monitor;
+  }
 
   public static void start(Context context, ComponentName target) {
-    sQueue.enqueue(new RunnerSpec(context, target, Command.START));
+    sQueue.enqueue(new Service(context, target, Action.START));
   }
 
   public static void stop(Context context, ComponentName target) {
-    sQueue.enqueue(new RunnerSpec(context, target, Command.STOP));
+    sQueue.enqueue(new Service(context, target, Action.STOP));
   }
 
   public static void bind(Context context, ComponentName target, ServiceConnection connection) {
-    final RunnerSpec bind = new RunnerSpec(context, target, Command.BIND);
+    final Service bind = new Service(context, target, Action.BIND);
     bind.mConnection = connection;
     sQueue.enqueue(bind);
   }
 
   public static void unbind(Context context, ComponentName target, ServiceConnection connection) {
-    final RunnerSpec unbind = new RunnerSpec(context, target, Command.UNBIND);
+    final Service unbind = new Service(context, target, Action.UNBIND);
     unbind.mConnection = connection;
     sQueue.enqueue(unbind);
   }
+
+  ///////////////////////////////////////////////////////////////////////////
+  // internal api
+  ///////////////////////////////////////////////////////////////////////////
 
   public static void scheduleNext() {
     sQueue.scheduleNext();
   }
 
   public static String currentName() {
-    final RunnerSpec spec = sQueue.getCurrent();
+    final Service spec = sQueue.getCurrent();
     return spec == null ? null : spec.mTarget.getClassName();
   }
 
@@ -62,26 +81,26 @@ public final class DlServiceRunner {
 
     private static final String TAG = "ServiceQueue";
 
-    private final List<RunnerSpec> mServices = new ArrayList<RunnerSpec>() {
-      @Override public boolean add(RunnerSpec runner) {
+    private final Deque<Service> mServices = new LinkedList<Service>() {
+      @Override public boolean add(Service runner) {
         return !contains(runner) && super.add(runner);
       }
     };
     // 已绑定的 service
     private final List<ServiceConnection> mConnections = new ArrayList<>();
-    private RunnerSpec mCurrent;
+    private Service mCurrent;
 
-    void enqueue(RunnerSpec spec) {
+    void enqueue(Service spec) {
       spec.throwIfInvalid();
-      if (spec.mCommand == Command.BIND && mConnections.contains(spec.mConnection)) {
+      if (spec.mAction == Action.BIND && mConnections.contains(spec.mConnection)) {
         Log.w(TAG, "enqueue() already bound: " + spec);
         return;
       }
-      if (spec.mCommand == Command.UNBIND && !mConnections.contains(spec.mConnection)) {
+      if (spec.mAction == Action.UNBIND && !mConnections.contains(spec.mConnection)) {
         Log.w(TAG, "enqueue() already unbound: " + spec);
         return;
       }
-      mServices.add(spec);
+      mServices.addLast(spec);
       tryExecuteNext();
     }
 
@@ -90,14 +109,14 @@ public final class DlServiceRunner {
       tryExecuteNext();
     }
 
-    RunnerSpec getCurrent() {
+    Service getCurrent() {
       return mCurrent;
     }
 
     private void tryExecuteNext() {
-      dump();
+      dump("before executing ");
       if (mServices.size() > 0 && mCurrent == null) {
-        mCurrent = mServices.remove(0);
+        mCurrent = mServices.removeFirst();
         final Result result = mCurrent.execute();
         if (result == Result.BOUND) {
           mConnections.add(mCurrent.mConnection);
@@ -105,36 +124,42 @@ public final class DlServiceRunner {
           mConnections.remove(mCurrent.mConnection);
         }
         Log.d(TAG, "tryExecuteNext() result: " + result);
+        if (sMonitor != null) {
+          sMonitor.onResult(mCurrent.mTarget, mCurrent.mAction, result);
+        }
       }
+      dump("after executing ");
     }
 
-    private void dump() {
-      Log.wtf("ServiceQueue", "mCurrent=" + mCurrent
-        + ", mServices=" + mServices
-        + ", mConnections=" + mConnections
-      );
+    private void dump(String prefix) {
+      if (mServices.size() != 0) {
+        Log.wtf("ServiceQueue", prefix + "current=" + mCurrent
+          + ", services=" + mServices
+          + ", connections=" + mConnections
+        );
+      }
     }
   }
 
-  private static class RunnerSpec {
+  private static class Service {
 
-    private static final String TAG = "RunnerSpec";
+    private static final String TAG = "Service";
 
-    private final Command mCommand;
+    private final Action mAction;
     private final Context mContext;
     private final ComponentName mTarget;
     private ServiceConnection mConnection;
 
-    private RunnerSpec(Context context, ComponentName target, Command command) {
+    private Service(Context context, ComponentName target, Action action) {
       mContext = context;
       mTarget = target;
-      mCommand = command;
+      mAction = action;
     }
 
     Result execute() {
       final Intent service = new Intent(mContext, ProxyService.class)
         .putExtra(DlConst.REAL_COMPONENT, mTarget);
-      switch (mCommand) {
+      switch (mAction) {
         case START:
           final ComponentName component = mContext.startService(service);
           Log.d(TAG, "startService() component: " + component);
@@ -152,50 +177,36 @@ public final class DlServiceRunner {
           Log.d(TAG, "unbindService() connection: " + mConnection);
           return Result.UNBOUND;
         default:
-          Log.d(TAG, "run() invalid command: " + mCommand);
+          Log.d(TAG, "run() invalid action: " + mAction);
           return Result.NONE;
       }
     }
 
     void throwIfInvalid() {
-      if ((mCommand == Command.BIND || mCommand == Command.UNBIND) && mConnection == null) {
-        throw new IllegalArgumentException("connection is null");
+      if (mConnection == null && (mAction == Action.BIND || mAction == Action.UNBIND)) {
+        throw new IllegalArgumentException("connection is null when action: " + mAction);
       }
     }
 
     @Override public boolean equals(Object o) {
       if (this == o) return true;
-      if (!(o instanceof RunnerSpec)) return false;
-      RunnerSpec that = (RunnerSpec) o;
-      return mCommand == that.mCommand &&
+      if (!(o instanceof Service)) return false;
+      Service that = (Service) o;
+      return mAction == that.mAction &&
         Objects.equals(mTarget, that.mTarget) &&
         Objects.equals(mContext, that.mContext);
     }
 
     @Override public int hashCode() {
-      return Objects.hash(mCommand, mTarget, mContext);
+      return Objects.hash(mAction, mTarget, mContext);
     }
 
     @NonNull @Override public String toString() {
-      return "RunnerSpec{" +
-        "mCommand=" + mCommand +
-        ", mContext=" + mContext +
-        ", mTarget=" + mTarget +
+      return "Service{" +
+        "action=" + mAction +
+        ", context=" + mContext +
+        ", target=" + mTarget +
         '}';
-    }
-  }
-
-  public interface Callbacks {
-    default void onServiceStarted(ComponentName component) {
-    }
-
-    default void onServiceStopped(ComponentName component) {
-    }
-
-    default void onServiceBound(ComponentName component) {
-    }
-
-    default void onServiceUnbound(ComponentName component) {
     }
   }
 }
